[tool.poetry]
name = "api-client"
version = "0.1.0"
description = ""
authors = ["Vitaliy <vitaliy.igorevich@mail.ru>"]
readme = "README.md"
packages = [{include = "api_client"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.0"
pydantic = "^1.10.7"
yarl = "^1.8.2"
tenacity = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
